tools/re2c/src/conf/parse_opts.cc
/* Generated by re2c 0.16 on Thu Jan 21 10:47:47 2016 */
#line 1 "../src/conf/parse_opts.re"
#include "src/codegen/input_api.h"
#include "src/conf/msg.h"
#include "src/conf/opt.h"
#include "src/conf/warn.h"
#include "src/globals.h"
#include "src/ir/regexp/empty_class_policy.h"
#include "src/ir/regexp/encoding/enc.h"

namespace re2c
{

static inline bool next (char * & arg, char ** & argv)
{
	arg = *++argv;
	return arg != NULL;
}

parse_opts_t parse_opts (char ** argv, Opt & opts)
{
#define YYCTYPE unsigned char
	char * YYCURSOR;
	char * YYMARKER;
	Warn::option_t option;

#line 31 "../src/conf/parse_opts.re"


opt:
	if (!next (YYCURSOR, argv))
	{
		goto end;
	}

#line 37 "src/conf/parse_opts.cc"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[] = {
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
	};
	yych = (YYCTYPE)*YYCURSOR;
	if (yych <= 0x00) goto yy2;
	if (yych == '-') goto yy5;
	goto yy4;
yy2:
	++YYCURSOR;
yy3:
#line 40 "../src/conf/parse_opts.re"
	{
		error ("bad option: %s", *argv);
		return EXIT_FAIL;
	}
#line 87 "src/conf/parse_opts.cc"
yy4:
	yyaccept = 0;
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	goto yy10;
yy5:
	++YYCURSOR;
	if ((yych = (YYCTYPE)*YYCURSOR) <= '-') {
		if (yych <= 0x00) goto yy11;
		if (yych >= '-') goto yy13;
	} else {
		if (yych == 'W') goto yy15;
	}
#line 63 "../src/conf/parse_opts.re"
	{ goto opt_short; }
#line 102 "src/conf/parse_opts.cc"
yy7:
	++YYCURSOR;
#line 61 "../src/conf/parse_opts.re"
	{ if (!opts.source (*argv))     return EXIT_FAIL; goto opt; }
#line 107 "src/conf/parse_opts.cc"
yy9:
	++YYCURSOR;
	yych = (YYCTYPE)*YYCURSOR;
yy10:
	if (yybm[0+yych] & 128) {
		goto yy9;
	}
	goto yy7;
yy11:
	++YYCURSOR;
#line 60 "../src/conf/parse_opts.re"
	{ if (!opts.source ("<stdin>")) return EXIT_FAIL; goto opt; }
#line 120 "src/conf/parse_opts.cc"
yy13:
	++YYCURSOR;
	if ((yych = (YYCTYPE)*YYCURSOR) <= 0x00) goto yy17;
#line 64 "../src/conf/parse_opts.re"
	{ goto opt_long; }
#line 126 "src/conf/parse_opts.cc"
yy15:
	yyaccept = 1;
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych <= 'e') {
		if (yych <= 0x00) goto yy19;
		if (yych >= 'e') goto yy21;
	} else {
		if (yych == 'n') goto yy23;
	}
yy16:
#line 68 "../src/conf/parse_opts.re"
	{ option = Warn::W;        goto opt_warn; }
#line 139 "src/conf/parse_opts.cc"
yy17:
	++YYCURSOR;
#line 46 "../src/conf/parse_opts.re"
	{
		// all remaining arguments are non-options
		// so they must be input files
		// re2c expects exactly one input file
		for (char * f; next (f, argv);)
		{
			if (!opts.source (f))
			{
				return EXIT_FAIL;
			}
		}
		goto end;
	}
#line 156 "src/conf/parse_opts.cc"
yy19:
	++YYCURSOR;
#line 66 "../src/conf/parse_opts.re"
	{ warn.set_all ();       goto opt; }
#line 161 "src/conf/parse_opts.cc"
yy21:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy24;
yy22:
	YYCURSOR = YYMARKER;
	if (yyaccept <= 1) {
		if (yyaccept == 0) {
			goto yy3;
		} else {
			goto yy16;
		}
	} else {
		goto yy28;
	}
yy23:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy25;
	goto yy22;
yy24:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy26;
	goto yy22;
yy25:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy27;
	goto yy22;
yy26:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy29;
	goto yy22;
yy27:
	yyaccept = 2;
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'e') goto yy30;
yy28:
#line 69 "../src/conf/parse_opts.re"
	{ option = Warn::WNO;      goto opt_warn; }
#line 199 "src/conf/parse_opts.cc"
yy29:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy31;
	goto yy22;
yy30:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy32;
	goto yy22;
yy31:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= 0x00) goto yy33;
	if (yych == '-') goto yy35;
	goto yy22;
yy32:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy37;
	goto yy22;
yy33:
	++YYCURSOR;
#line 67 "../src/conf/parse_opts.re"
	{ warn.set_all_error (); goto opt; }
#line 221 "src/conf/parse_opts.cc"
yy35:
	++YYCURSOR;
#line 70 "../src/conf/parse_opts.re"
	{ option = Warn::WERROR;   goto opt_warn; }
#line 226 "src/conf/parse_opts.cc"
yy37:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych != 'o') goto yy22;
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych != 'r') goto yy22;
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych != '-') goto yy22;
	++YYCURSOR;
#line 71 "../src/conf/parse_opts.re"
	{ option = Warn::WNOERROR; goto opt_warn; }
#line 237 "src/conf/parse_opts.cc"
}
#line 72 "../src/conf/parse_opts.re"


opt_warn:

#line 244 "src/conf/parse_opts.cc"
{
	YYCTYPE yych;
	yych = (YYCTYPE)*YYCURSOR;
	switch (yych) {
	case 'c':	goto yy46;
	case 'e':	goto yy47;
	case 'm':	goto yy48;
	case 's':	goto yy49;
	case 'u':	goto yy50;
	default:	goto yy44;
	}
yy44:
	++YYCURSOR;
yy45:
#line 77 "../src/conf/parse_opts.re"
	{
		error ("bad warning: %s", *argv);
		return EXIT_FAIL;
	}
#line 264 "src/conf/parse_opts.cc"
yy46:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'o') goto yy51;
	goto yy45;
yy47:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'm') goto yy53;
	goto yy45;
yy48:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'a') goto yy54;
	goto yy45;
yy49:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'w') goto yy55;
	goto yy45;
yy50:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'n') goto yy56;
	if (yych == 's') goto yy57;
	goto yy45;
yy51:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy58;
yy52:
	YYCURSOR = YYMARKER;
	goto yy45;
yy53:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy59;
	goto yy52;
yy54:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy60;
	goto yy52;
yy55:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy61;
	goto yy52;
yy56:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy62;
	if (yych == 'r') goto yy63;
	goto yy52;
yy57:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy64;
	goto yy52;
yy58:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy65;
	goto yy52;
yy59:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy66;
	goto yy52;
yy60:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy67;
	goto yy52;
yy61:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy68;
	goto yy52;
yy62:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy69;
	goto yy52;
yy63:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy70;
	goto yy52;
yy64:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'l') goto yy71;
	goto yy52;
yy65:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy72;
	goto yy52;
yy66:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'y') goto yy73;
	goto yy52;
yy67:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'h') goto yy74;
	goto yy52;
yy68:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy75;
	goto yy52;
yy69:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'f') goto yy76;
	goto yy52;
yy70:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy77;
	goto yy52;
yy71:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy78;
	goto yy52;
yy72:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy79;
	goto yy52;
yy73:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy80;
	goto yy52;
yy74:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy81;
	goto yy52;
yy75:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy82;
	goto yy52;
yy76:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy83;
	goto yy52;
yy77:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy84;
	goto yy52;
yy78:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy85;
	goto yy52;
yy79:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy86;
	goto yy52;
yy80:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy87;
	goto yy52;
yy81:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy88;
	goto yy52;
yy82:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy89;
	goto yy52;
yy83:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy90;
	goto yy52;
yy84:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'h') goto yy91;
	goto yy52;
yy85:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy92;
	goto yy52;
yy86:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy93;
	goto yy52;
yy87:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'h') goto yy94;
	goto yy52;
yy88:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'm') goto yy95;
	goto yy52;
yy89:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy96;
	goto yy52;
yy90:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy97;
	goto yy52;
yy91:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy98;
	goto yy52;
yy92:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy99;
	goto yy52;
yy93:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy100;
	goto yy52;
yy94:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy101;
	goto yy52;
yy95:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy102;
	goto yy52;
yy96:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy103;
	goto yy52;
yy97:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy104;
	goto yy52;
yy98:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'b') goto yy105;
	goto yy52;
yy99:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy106;
	goto yy52;
yy100:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy107;
	goto yy52;
yy101:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy108;
	goto yy52;
yy102:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy109;
	goto yy52;
yy103:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy110;
	goto yy52;
yy104:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy111;
	goto yy52;
yy105:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'l') goto yy112;
	goto yy52;
yy106:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy113;
	goto yy52;
yy107:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy114;
	goto yy52;
yy108:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy115;
	goto yy52;
yy109:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'y') goto yy116;
	goto yy52;
yy110:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy117;
	goto yy52;
yy111:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy118;
	goto yy52;
yy112:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy119;
	goto yy52;
yy113:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy120;
	goto yy52;
yy114:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy121;
	goto yy52;
yy115:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy122;
	goto yy52;
yy116:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy123;
	goto yy52;
yy117:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'g') goto yy124;
	goto yy52;
yy118:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy125;
	goto yy52;
yy119:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy126;
	goto yy52;
yy120:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy127;
	goto yy52;
yy121:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy128;
	goto yy52;
yy122:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy129;
	goto yy52;
yy123:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy130;
	goto yy52;
yy124:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy131;
	goto yy52;
yy125:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy132;
	goto yy52;
yy126:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy133;
	goto yy52;
yy127:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy134;
	goto yy52;
yy128:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy135;
	goto yy52;
yy129:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy136;
	goto yy52;
yy130:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy137;
	goto yy52;
yy131:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= 0x00) goto yy138;
	goto yy52;
yy132:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy140;
	goto yy52;
yy133:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'u') goto yy141;
	goto yy52;
yy134:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy142;
	goto yy52;
yy135:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy143;
	goto yy52;
yy136:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy144;
	goto yy52;
yy137:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy145;
	goto yy52;
yy138:
	++YYCURSOR;
#line 84 "../src/conf/parse_opts.re"
	{ warn.set (Warn::SWAPPED_RANGE,          option); goto opt; }
#line 637 "src/conf/parse_opts.cc"
yy140:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy146;
	goto yy52;
yy141:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'l') goto yy147;
	goto yy52;
yy142:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= 0x00) goto yy148;
	goto yy52;
yy143:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= 0x00) goto yy150;
	goto yy52;
yy144:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy152;
	goto yy52;
yy145:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy153;
	goto yy52;
yy146:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy154;
	goto yy52;
yy147:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy155;
	goto yy52;
yy148:
	++YYCURSOR;
#line 87 "../src/conf/parse_opts.re"
	{ warn.set (Warn::USELESS_ESCAPE,         option); goto opt; }
#line 674 "src/conf/parse_opts.cc"
yy150:
	++YYCURSOR;
#line 81 "../src/conf/parse_opts.re"
	{ warn.set (Warn::CONDITION_ORDER,        option); goto opt; }
#line 679 "src/conf/parse_opts.cc"
yy152:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy156;
	goto yy52;
yy153:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy157;
	goto yy52;
yy154:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'l') goto yy158;
	goto yy52;
yy155:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy159;
	goto yy52;
yy156:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'l') goto yy160;
	goto yy52;
yy157:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'g') goto yy161;
	goto yy52;
yy158:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy162;
	goto yy52;
yy159:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= 0x00) goto yy163;
	goto yy52;
yy160:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy165;
	goto yy52;
yy161:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= 0x00) goto yy166;
	goto yy52;
yy162:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'f') goto yy168;
	goto yy52;
yy163:
	++YYCURSOR;
#line 86 "../src/conf/parse_opts.re"
	{ warn.set (Warn::UNREACHABLE_RULES,      option); goto opt; }
#line 728 "src/conf/parse_opts.cc"
yy165:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy169;
	goto yy52;
yy166:
	++YYCURSOR;
#line 83 "../src/conf/parse_opts.re"
	{ warn.set (Warn::MATCH_EMPTY_STRING,     option); goto opt; }
#line 737 "src/conf/parse_opts.cc"
yy168:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'l') goto yy170;
	goto yy52;
yy169:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy171;
	goto yy52;
yy170:
	yych = (YYCTYPE)*++YYCURSOR;
